--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.Leo_Proger</groupId>
-    <artifactId>TextEncoder</artifactId>
+    <artifactId>Text_Encoder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
